[package]
name = "interactive-webdriver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
image = "0.24"
imageproc = "0.23"
which = "6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
thirtyfour = { version = "0.33", default-features = true }
keeper-secrets-manager-core = "17"
yup-oauth2 = "7"
